--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,6 +1,4 @@
 # Supabase CLI configuration for Chinchiro Online
-[project]
-id = ""
 
 [api]
 enabled = true
@@ -18,6 +16,7 @@ port = 54323
 [auth]
 enabled = true
 site_url = "http://localhost:5173"
+enable_anonymous_sign_ins = true
 
 [auth.external.github]
 enabled = false
@@ -25,5 +24,5 @@ enabled = false
 [realtime]
 enabled = true
 
-[functions]
-verify_jwt = false
+[functions.verify_jwt]
+enabled = false
